Display history record

--- a/index.html
+++ b/index.html
@@ -142,6 +142,46 @@ AN4111071 Ye Zhijia The Second Homework 5/17
         </div>
 
         <div class="gameScreen Screen">
+            <div class="tableContainer">
+                <table class="history">
+                    <thead>
+                        <tr>
+                            <th>Outcome</th>
+                            <th>Total Bet</th>
+                            <th>Play time</th>
+                            <th>Profit</th>
+                        </tr>
+                    </thead>
+
+                    <tbody class="tableContent">
+                    </tbody>
+                </table>
+
+                <button class="tableBTN">View more records</button>
+            </div>
+
+            <div class="cover">
+                <div class="tableContainerCenter">
+                    <table class="history">
+                        <thead>
+                            <tr>
+                                <th>Outcome</th>
+                                <th>Total Bet</th>
+                                <th>Play time</th>
+                                <th>Profit</th>
+                            </tr>
+                        </thead>
+
+                        <tbody class="tableContent">
+                        </tbody>
+                    </table>
+                    
+                    <button class="tableCloseBTN">
+                        Close the table
+                    </button>
+                </div>
+            </div>
+
             <div class="dealer">
                 <img src = "assets/images/pokers/poker.png" class="poker">
                 <img src = "assets/images/pokers/poker.png" class="poker">
