Delete the localStorage

--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@ AN4111071 Ye Zhijia The Second Homework 5/17
                     <button class="tableCloseBTN">
                         Close the table
                     </button>
+
+                    <button class="tableClearBTN">
+                        Clear Records
+                    </button>
                 </div>
             </div>
 
