--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@ AN4111071 Ye Zhijia The Second Homework 5/17
             </div>
         </div>
 
+        <a href="" class="advertisement" target="_blank"></a>
+        <button class="advertisementClose">X</button>
+
         <script type="text/script" src = "src/player.js"></script>
         <script type="text/script" src = "src/function.js"></script>
         <script type="module" src = "src/script.js"></script>
