Updata chips display

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ AN4111071 Ye Zhijia The Second Homework 5/17
                         <img src = "assets/images/icons/poker-chip.png">
                     </div>  
                     <div class="betmoney">
-                        Put in 1K chips
+                        Put in: 1K chips
                     </div>
                 </div>
             </div>
